prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/50k_nested_tables.diag.txt
ERROR: AST too big. Consider simplifying it
testData/diagnostics/50k_nested_tables.nut:1:101

x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={
                                                                                                     ^
x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={x={


